# lightning-ml-starter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements-dev.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
configs/: sweep.yaml  train.yaml
docs/: docker.md  hydra.md  parser.md  pytorch_lightning.md  wandb.md  wandb_sweep.md
notebooks/: training_and_inference.ipynb
src/: inference.py  train.py
src/configs/: config.yaml
src/detection_toolkit/datamodules/: voc_datamodule.py
src/detection_toolkit/models/: detector.py
