[metadata]
name = detection_toolkit
version = 0.1.0
description = A professional object detection toolkit using PyTorch Lightning and WandB.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/ml_project_template
author = Your Name
author_email = your.email@example.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    numpy
    pandas
    scikit-learn
    matplotlib
    tqdm
    requests
    hydra-core
    hydra-colorlog
    torchmetrics
    pytorch-lightning
    wandb
python_requires = >=3.11

[options.packages.find]
where = src
exclude =
    tests*
    testing*

[options.extras_require]
dev =
    black
    coverage
    flake8
    isort
    pre-commit
    pytest
    pyyaml
    tox
    notebook
    ipywidgets
